# agri-dashboards

./: dashboard.py  farmers_data.xlsx  pyproject.toml  styles.css
